2002-01-01  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in: Added "AC_PROG_INTLTOOL(0.11)" line.

	* Makefile.am: Use intltool.

	* GNOME_Sodipodi.oaf.in: New, copied from GNOME_Sodipodi.oafinfo.

	* sodipodi.desktop.in: New, generated from sodipodi.desktop.

	* GNOME_Sodipodi.oafinfo, sodipodi.desktop: Removed.

	* glade/Makefile.am (glade_DATA): Removed *.c.

	* glade/*.c: Removed.

	* .cvsignore: Added intltool-*, sodipodi.desktop, GNOME_Sodipodi.oaf.

	* src/bonobo/svg-doc-factory.c, src/desktop.c, src/dialogs/align.c,
	src/dialogs/display-settings.c, src/dialogs/document-properties.c,
	src/dialogs/fill-style.c, src/dialogs/gradient-selector.c,
	src/dialogs/gradient-vector.c, src/dialogs/item-properties.c,
	src/dialogs/object-attributes.c, src/dialogs/object-properties.c,
	src/help.c, src/helper/unit-menu.c, src/main.c, src/sodipodi.c,
	src/sp-anchor.c, src/sp-image.c, src/sp-item-group.c, src/sp-rect.c,
	src/sp-shape.c, src/sp-spiral.c, src/sp-star.c, src/sp-text.c,
	src/widgets/sp-color-selector.c: Added missing #include <config.h>.

2001-12-30  Lauris Kaplinski  <lauris@localhost.localdomain>

	* src/widgets/sp-color-selector.c (sp_color_selector_adjustment_changed): Set
	updating flag here, so we get single "changed" signal whatever happens

	* src/sp-gradient.c (sp_gradient_repr_set_vector): Allow setting our
	own vector too here

	* src/sp-object.h (SP_OBJECT_NEXT): New macro

	* src/gradient-chemistry.c (sp_gradient_ensure_vector_normalized): Should
	work as intended now
	(sp_gradient_ensure_private_normalized): Ditto
	(sp_gradient_repr_set_link): Set NULL link too

2001-12-30  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-spiral.c src/sp-star.c:
	Revert to previous cx, cy attribute implementation.
	Because SVG standard shape introduce cx, cy,
	so we coordinate to that policy.

	* src/sp-spiral.c (sp_spiral_get_polar): New function
	(sp_spiral_is_invalid): New function to protect attributes
	consistency. sp_spiral_read_attr use it.
